crates/solidity/testing/snapshots/bindings_output/errors/revert_stmt/generated/0.4.22-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
   ╭─[input.sol:2:23]
   │
 2 │     error InvalidState();
   │                       ─┬  
   │                        ╰── Error occurred here.
───╯
Error: Expected Equal or Semicolon.
   ╭─[input.sol:5:28]
   │
 5 │         revert InvalidState();
   │                            ─┬  
   │                             ╰── Error occurred here.
───╯
Error: Expected Equal or Semicolon.
    ╭─[input.sol:10:21]
    │
 10 │         revert Utils.GenericError(code);
    │                     ─────────┬─────────  
    │                              ╰─────────── Error occurred here.
────╯
Error: Expected Equal or Semicolon.
    ╭─[input.sol:15:23]
    │
 15 │     error GenericError(int code);
    │                       ─────┬────  
    │                            ╰────── Error occurred here.
────╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  1 │ contract Test {
    │          ──┬─  
    │            ╰─── def: 1
  2 │     error InvalidState();
    │     ──┬── ──────┬─────  
    │       ╰───────────────── unresolved
    │                 │       
    │                 ╰─────── def: 2
    │ 
  4 │     function testRevert() public {
    │              ─────┬────  
    │                   ╰────── def: 3
  5 │         revert InvalidState();
    │         ───┬── ──────┬─────  
    │            ╰───────────────── refs: built-in, built-in
    │                      │       
    │                      ╰─────── def: 4
    │ 
  8 │     function testOtherRevert() public {
    │              ───────┬───────  
    │                     ╰───────── def: 5
  9 │         int code = 10;
    │             ──┬─  
    │               ╰─── def: 6
 10 │         revert Utils.GenericError(code);
    │         ───┬── ──┬──  
    │            ╰────────── refs: built-in, built-in
    │                  │    
    │                  ╰──── def: 7
    │ 
 14 │ library Utils {
    │         ──┬──  
    │           ╰──── def: 8
 15 │     error GenericError(int code);
    │     ──┬── ──────┬─────  
    │       ╰───────────────── unresolved
    │                 │       
    │                 ╰─────── def: 9
────╯
